[change] csrfTokenのAPIエンドポイントを変更
